fixed truncating bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -361,7 +361,7 @@ ul {
 }
 
 .body-p {
-	background-color: #f0f0f0;
+
 	margin: 10px;
 }
 
